# tcms

./: .env_example  .pre-commit-config.yaml  Dockerfile  Makefile  conftest.py  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
apps/person/: admin.py  urls.py
apps/person/api/: filters.py  serializers.py  views.py
apps/person/migrations/: 0001_initial.py
apps/person/models/: __init__.py  managers.py  person.py
apps/person/tests/factories/: person.py
apps/person/tests/model_tests/: person_model_tests.py
apps/training_process/: admin.py  apps.py  urls.py
apps/training_process/api/filters/: __init__.py  group_application.py
apps/training_process/api/serializers/: __init__.py  (+2 more)
apps/training_process/migrations/: 0001_initial.py  0002_initial.py  0003_groupapplication.py  0004_groupapplication_reject_reason.py  0005_alter_groupapplication_managers.py
apps/training_process/models/: __init__.py  choices.py  group.py  group_application.py  managers.py
apps/training_process/services/: __init__.py  group_application_approve.py  group_application_reject.py
apps/user/: admin.py  urls.py
apps/user/api/: filters.py  serializers.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_administrator_managers.py  0002_athlete.py  0003_coach.py  0003_coach_coach_experience.py  0004_alter_administrator_options_alter_coach_options_and_more.py
apps/user/models/: __init__.py  administrator.py  athlete.py  choices.py  coach.py  managers.py  user.py  utils.py
apps/user/services/: __init__.py  appoint_administrator.py  appoint_athlete.py  appoint_coach.py  cancel_administrator.py  cancel_athlete.py  cancel_coach.py  user_appint_administrator.py
apps/user/tests/: fixtures.py
common/: choices.py  managers.py  mixins.py  utils.py
configs/: settings.py  urls.py
tests/: __init__.py  conftest.py  utils.py
tests/factories/: administrator.py  athlete.py  coach.py  group.py  group_application.py  user.py
tests/helpers/: __init__.py  administrator.py  athelete.py  coach.py  user.py
tests/tests_api/: conftest.py  test_administrator_api.py  test_athlete_api.py  test_coach_api.py  test_user_api.py
tests/tests_models/: test_administrator_model.py  test_athlete_model.py  test_coach_model.py  test_user_model.py
(+49 files in other folders)
